syntax = "proto3";

package payments;

service Payments{
    rpc CreateCharge(CreateCharge) returns (CreateChargeResponse){}
}

message CreateCharge {
    string email = 1;
    int32 amount = 2;
    CardMessage card = 3;    
}

message CardMessage{
    string cvc = 1;
    int32 expMonth = 2;
    int32 expYear = 3;
    string number = 4;
}

message CreateChargeResponse{
    string id = 1;
}